# empire-fs

./: .gitignore  README.md  dev-run.bat  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst
docs/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
docs/html/_sources/: usage.rst.txt
docs/html/_static/: header.xcf
src/efs/core/: __init__.pxd  path_core.c  path_core.html  path_core.pxd  path_core.pyi  path_core.pyx
src/efs/file_system/: __init__.py  _fs.py
src/efs/imports/: __init__.py  imports.py
src/efs/io_/: __init__.py  io_.py  read_swarm.py  yml_io.py
src/efs/path/: __init__.py  path_class.py
src/efs/scan/: __init__.py  scan.py
