[build-system]
requires = [
    "setuptools>=68.0",
    "Cython~=3.0.0b1"
]
build-backend = "setuptools.build_meta"

[project]
name = "empire-fs"
version = "1.0"
authors = [
    {name="Yann Tremblay", email="yanntremblay@tombmyst.ca"}
]
description = "File-system utilities"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
	"Typing :: Typed"
]
dependencies = [
    "empire_commons@https://github.com/Tombmyst-Empire/empire-commons/archive/refs/heads/master.zip"
]
[project.optional-dependencies]
tests = ["requirements_dev.txt"]

[project.urls]
"Homepage" = "https://github.com/Tombmyst-Empire/empire-fs"
"Bug Tracker" = "https://github.com/Tombmyst-Empire/empire-fs/issues"

[tool.pytest.ini_options]
minversion = "7.3.1"
python_files = "test_*.py"
testpaths = [
    "tests"
]
pythonpath = "."

[tool.black]
line-length = 150

[tool.pylint.main]
py-version = "3.10"
max-line-length = 150
max-args = 10
max-attributes = 25
recursive = true
jobs = 0
extension-pkg-allow-list = ["efs.core"]

[tool.pylint.'MESSAGE CONTROL']
confidence = "UNDEFINED"

[tool.pylint.reports]
output-format = "colorized"